{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 25,
  "lineage": "d8a96d92-660d-5e3f-2fab-615314854ddf",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "project_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:loadbalancer/app/project-alb/f1fa1b498f697a9b",
            "arn_suffix": "app/project-alb/f1fa1b498f697a9b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "project-alb-2136563175.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:loadbalancer/app/project-alb/f1fa1b498f697a9b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05af342e95cd60a8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-025fca80d06a08776"
              },
              {
                "subnet_id": "subnet-03ec3e391d14f9a68"
              }
            ],
            "subnets": [
              "subnet-025fca80d06a08776",
              "subnet-03ec3e391d14f9a68"
            ],
            "tags": {
              "Name": "project-lb"
            },
            "tags_all": {
              "Name": "project-lb"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_lb_https_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:listener/app/project-alb/f1fa1b498f697a9b/828bc2f0e0ab4bd0",
            "certificate_arn": "arn:aws:acm:us-east-1:134400980685:certificate/55dcb93e-0513-4a82-bd1d-fd013fb2f592",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:listener/app/project-alb/f1fa1b498f697a9b/828bc2f0e0ab4bd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:loadbalancer/app/project-alb/f1fa1b498f697a9b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.project_lb",
            "module.aws_ceritification_manager.aws_acm_certificate.project_acm_arn",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project_lb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:listener/app/project-alb/f1fa1b498f697a9b/b1dc48d3c5d65e52",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:listener/app/project-alb/f1fa1b498f697a9b/b1dc48d3c5d65e52",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:loadbalancer/app/project-alb/f1fa1b498f697a9b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.project_lb",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2-20250411125348805100000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
            "target_id": "i-02363660a50921c03"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_ec2_instance_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00a929b66ed6e0de6",
            "arn": "arn:aws:ec2:us-east-1:134400980685:instance/i-02363660a50921c03",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02363660a50921c03",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c00e2d762d32d713",
            "private_dns": "ip-11-0-1-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.1.44",
            "public_ip": "54.163.161.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040e4b9781c833619",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025fca80d06a08776",
            "tags": {
              "Name": "Jenkins:Linux EC2"
            },
            "tags_all": {
              "Name": "Jenkins:Linux EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c95219894ba39eb",
              "sg-05af342e95cd60a8c"
            ]
          },
          "dependencies": [
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project_lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
            "arn_suffix": "targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 6,
                "interval": 5,
                "matcher": "200",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jenkins-lb-target-group",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.lb_target_group",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project_lb_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2-20250411125348395600000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:134400980685:targetgroup/jenkins-lb-target-group/005cd5811d2c57b2",
            "target_id": "i-02363660a50921c03"
          },
          "dependencies": [
            "module.jenkins.aws_instance.jenkins_ec2_instance_ip",
            "module.lb_target_group.aws_lb_target_group.project_lb_target_group",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1",
            "module.security_group.aws_security_group.ec2_jenkins_port_8080",
            "module.security_group.aws_security_group.ec2_sg_ssh_http"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:internet-gateway/igw-0241b9c1e216a9e5a",
            "id": "igw-0241b9c1e216a9e5a",
            "owner_id": "134400980685",
            "tags": {
              "Name": "project-1-igw"
            },
            "tags_all": {
              "Name": "project-1-igw"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:route-table/rtb-0f45229499ce66a74",
            "id": "rtb-0f45229499ce66a74",
            "owner_id": "134400980685",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "project-1-private-rt"
            },
            "tags_all": {
              "Name": "project-1-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:route-table/rtb-01aae394808ea3a95",
            "id": "rtb-01aae394808ea3a95",
            "owner_id": "134400980685",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0241b9c1e216a9e5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "project-1-public-rt"
            },
            "tags_all": {
              "Name": "project-1-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_private_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0716a6e2fedf5f879",
            "route_table_id": "rtb-0f45229499ce66a74",
            "subnet_id": "subnet-0df6bfbc339a7d8d3"
          },
          "dependencies": [
            "module.networking.aws_route_table.project_private_subnets",
            "module.networking.aws_subnet.project_private_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be97963e89a7fd9d",
            "route_table_id": "rtb-0f45229499ce66a74",
            "subnet_id": "subnet-0e8f8bed912c3c30d"
          },
          "dependencies": [
            "module.networking.aws_route_table.project_private_subnets",
            "module.networking.aws_subnet.project_private_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project_public_rt_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011268fd48e4eabe7",
            "route_table_id": "rtb-01aae394808ea3a95",
            "subnet_id": "subnet-025fca80d06a08776"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_route_table.project_public_route_table",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e294875265633a6",
            "route_table_id": "rtb-01aae394808ea3a95",
            "subnet_id": "subnet-03ec3e391d14f9a68"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.project_public_internet_gateway",
            "module.networking.aws_route_table.project_public_route_table",
            "module.networking.aws_subnet.project_public_subnets",
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:subnet/subnet-0df6bfbc339a7d8d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df6bfbc339a7d8d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400980685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet-1"
            },
            "tags_all": {
              "Name": "project-private-subnet-1"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:subnet/subnet-0e8f8bed912c3c30d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8f8bed912c3c30d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400980685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-private-subnet-2"
            },
            "tags_all": {
              "Name": "project-private-subnet-2"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:subnet/subnet-025fca80d06a08776",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "11.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025fca80d06a08776",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400980685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-1"
            },
            "tags_all": {
              "Name": "project-public-subnet-1"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:subnet/subnet-03ec3e391d14f9a68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ec3e391d14f9a68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "134400980685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "project-public-subnet-2"
            },
            "tags_all": {
              "Name": "project-public-subnet-2"
            },
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc_us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:vpc/vpc-0e9d883f89da46d1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-003b6fd8fb111181b",
            "default_route_table_id": "rtb-0217333ae550adfd7",
            "default_security_group_id": "sg-0f8ea1099763ce6c1",
            "dhcp_options_id": "dopt-06b0eb3f49a3345fb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9d883f89da46d1d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0217333ae550adfd7",
            "owner_id": "134400980685",
            "tags": {
              "Name": "project-vpc-1"
            },
            "tags_all": {
              "Name": "project-vpc-1"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_jenkins_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:security-group/sg-04c95219894ba39eb",
            "description": "Enable the Port 8080 for jenkins",
            "egress": [],
            "id": "sg-04c95219894ba39eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 port to access jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Allow port 8080 for jenkins",
            "name_prefix": "",
            "owner_id": "134400980685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow Jenkins(8080)"
            },
            "tags_all": {
              "Name": "Security Groups to allow Jenkins(8080)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg_ssh_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134400980685:security-group/sg-05af342e95cd60a8c",
            "description": "Enable the Port 22(SSH) \u0026 Port 80(http)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outgoing request",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05af342e95cd60a8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP request from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS request from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow remote SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG for EC2 to enable SSH(22), HTTPS(443) and HTTP(80)",
            "name_prefix": "",
            "owner_id": "134400980685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "tags_all": {
              "Name": "Security Groups to allow SSH(22), HTTP(80) and HTTPS(443)"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9d883f89da46d1d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.project_vpc_us_east_1"
          ]
        }
      ]
    }
  ]
}